Add instructions about installing the package and the vignette

--- a/README.html
+++ b/README.html
@@ -360,7 +360,12 @@ obtained.</p>
 <p>Useful functions: - mv_lme: multivariate mixed effects models with
 association parameters - DynPred_mv_lme: dynamic individual
 predictions</p>
-<p>Check examples at <code>browseVignettes(“multiLME”)</code></p>
+<p>Install the package and get the vignette using the following
+code:</p>
+<p><code>devtools::install_github(“ERandrinopoulou/multiLME”,
+dependencies = FALSE, force = TRUE, build_vignettes = TRUE)</code><br />
+<br />
+<code>browseVignettes(“multiLME”)</code></p>
 </div>
 
 
