--- a/vignettes/multiLME-vignette.html
+++ b/vignettes/multiLME-vignette.html
@@ -381,7 +381,7 @@ terms,</li>
 z_{ij}^\top(t) b_{ij}\)</span> denotes the mean (noise-free) trajectory
 of outcome <span class="math inline">\(j\)</span>.</li>
 </ul>
-<p>Notably, the model for outcome 1 includes the <strong>underlying
+<p>The model for outcome 1 includes the <strong>underlying
 value</strong> of outcome 2 at time <span class="math inline">\(t\)</span>, represented by the term</p>
 <p><span class="math display">\[
 m_{i2}(t),
@@ -628,9 +628,8 @@ terms,</li>
 z_{ij}^\top(t) b_{ij}\)</span> denotes the mean (noise-free) trajectory
 of outcome <span class="math inline">\(j\)</span>.</li>
 </ul>
-<p>Notably, the model for outcome 1 includes the <strong>instantaneous
-rate of change</strong> of outcome 2: specifically, the derivative
-term</p>
+<p>The model for outcome 1 includes the <strong>instantaneous rate of
+change</strong> of outcome 2: specifically, the derivative term</p>
 <p><span class="math display">\[
 \frac{d}{dt} m_{i2}(t)
 \]</span></p>
@@ -748,8 +747,8 @@ terms,</li>
 z_{ij}^\top(t) b_{ij}\)</span> denotes the mean (noise-free) trajectory
 of outcome <span class="math inline">\(j\)</span>.</li>
 </ul>
-<p>Notably, the model for outcome 1 includes a <strong>historical
-effect</strong> of outcome 2: specifically, the integral term</p>
+<p>The model for outcome 1 includes a <strong>historical effect</strong>
+of outcome 2: specifically, the integral term</p>
 <p><span class="math display">\[
 \int_{t-2}^{t} m_{i2}(s) \, ds
 \]</span></p>
@@ -885,7 +884,7 @@ terms,</li>
 z_{ij}^\top(t) b_{ij}\)</span> denotes the mean (noise-free) trajectory
 of outcome <span class="math inline">\(j\)</span>.</li>
 </ul>
-<p>Notably, the model for outcome 1 includes the <strong>underlying
+<p>The model for outcome 1 includes the <strong>underlying
 value</strong> of outcome 2 at time <span class="math inline">\(t\)</span>, represented by the term</p>
 <p><span class="math display">\[
 m_{i2}(t),
